# choom

./: .gitignore  AGENTS.md  CMakeLists.txt
assets/levels/: blobber_test.json
assets/levels/decal_test/: decal_test.json
assets/levels/dyn_light_test01/: dyn_light_test01.json
assets/levels/loop_bug_example/: loop_bug_example.json
assets/levels/middle_texture_test/: middle_texture_test.json
assets/levels/multi_sector_test/: multi_sector_test.json
assets/levels/shadow_map_test1/: shadow_map_test1.json
assets/levels/static_light_test1/: static_light_test1.json
assets/levels/tes3/: tes3.json
assets/levels/test01/: test01.json
assets/levels/test2/: test2.json
assets/levels/test4/: test4.json
assets/levels/test5/: test5.json
assets/levels/test6/: test6.json
assets/levels/topology_smoke/: topology_smoke.json
assets/sector_demo/: sector_demo_level.json  sector_editor_working_level.json
assets/sprites/: goblin.json
docs/: assets.md  doom_like_topology_prototype_salvage_audit.md  input.md  sector_authoring_graph_audit_plan.md  sector_authoring_workflow.md  sector_baked_object_lighting_probes_design.md  sector_dynamic_lighting_design.md  sector_editor.md  sector_editor_refactor_plan.md  sector_engine_extraction_plan.md  sector_engine_split_audit.md  sector_portal_visibility_design.md  sector_topology_incremental_refactor.md  topology_final_cleanup_audit.md  ui.md
docs/archive/: doom_like_topology_prototype_salvage_audit.md  sector_topology_incremental_refactor.md  topology_final_cleanup_audit.md
docs/audit/: sector_billboard_authoring_audit.md  sector_door_system_audit.md
docs/plans/: sector_authoring_graph_transition_plan.md  sector_baked_object_lighting_probes_plan.md  sector_billboard_authoring_plan.md  sector_billboard_sprite_objects_plan.md  sector_door_system_v1_plan.md  sector_dynamic_point_lighting_plan.md  sector_dynamic_spotlight_plan.md  sector_dynamic_spotlight_shadow_map_plan.md  sector_lightmap_alpha_test_occlusion_plan.md  sector_portal_visibility_and_draw_culling_plan.md  sector_runtime_object_authoring_plan.md  sector_static_spotlight_plan.md
docs/topology_audits/: 01_closed_polygon_editor_assumptions.md  02_runtime_topology_consumers.md  03_stable_ids_and_properties.md  04_authoring_graph_model.md  05_migration_path.md  06_authoring_graph_transition_design.md  07_phase_13_inspector_hookup_audit.md
sources/: Main.cpp
sources/engine/: EngineContext.h
sources/engine/assets/: AssetHandles.h  AssetManager.cpp  AssetManager.h  FontAssets.cpp  FontAssets.h  FontLoadFlags.h  SpriteAnimationAssets.cpp  SpriteAnimationAssets.h  TextureAssets.cpp  TextureAssets.h  TextureLoadFlags.h
sources/engine/components/: PersistentId.h  SpriteAnimator.h  SpriteRenderer.h  Transform.h  Velocity.h
sources/engine/ecs/: ComponentPool.h  Entity.h  World.h
sources/engine/input/: Input.cpp  Input.h  InputConfig.h  InputEvents.h
sources/engine/render/: FxaaShader.h
sources/engine/systems/: MovementSystem.cpp  MovementSystem.h  SpriteAnimatorSystem.cpp  SpriteAnimatorSystem.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h
sources/engine/ui/: UI.cpp  UI.h
sources/engine/ui/demo/: UIDemo.cpp  UIDemo.h
sources/game/components/: Rectangle.h
sources/game/systems/: RectangleBounceSystem.cpp  RectangleBounceSystem.h  RenderRectanglesSystem.cpp  RenderRectanglesSystem.h
sources/sector_demo/: SectorAuthoringGraph.cpp  SectorAuthoringGraph.h  SectorCollisionWorld.cpp  SectorCollisionWorld.h  SectorDemo.cpp  SectorDemo.h  SectorDynamicPointLightSelection.cpp  SectorDynamicPointLightSelection.h  SectorFpsController.cpp  SectorFpsController.h  SectorFreeflyController.cpp  SectorFreeflyController.h  SectorGeneratedGeometry.cpp  SectorGeneratedGeometry.h  SectorLightmap.cpp  SectorLightmap.h  SectorLightmapTypes.h  SectorMap.cpp  SectorMap.h  SectorMeshBuilder.cpp  SectorMeshBuilder.h  SectorMeshPreview.cpp  SectorMeshPreview.h  SectorMeshTypes.h  SectorPointTypes.h  SectorPortalVisibility.cpp  SectorPortalVisibility.h  SectorRuntimeObjects.cpp  SectorRuntimeObjects.h  SectorSkyCylinder.cpp  SectorSkyCylinder.h  SectorTextureTypes.cpp  SectorTextureTypes.h  SectorTopologyCreation.cpp  SectorTopologyCreation.h  SectorTopologyEdit.cpp  SectorTopologyEdit.h  SectorTopologyGeometry.cpp  SectorTopologyGeometry.h  SectorTopologyMap.cpp  (+10 more)
sources/sector_editor/: SectorEditor.cpp  SectorEditor.h  SectorEditorAuthoringState.cpp  SectorEditorAuthoringState.h  SectorEditorDocumentActions.cpp  SectorEditorDocumentActions.h  SectorEditorHelpers.cpp  SectorEditorHelpers.h  SectorEditorLightInspector.cpp  SectorEditorLightInspector.h  SectorEditorLightmapModal.cpp  SectorEditorLightmapModal.h  SectorEditorMaterialActions.cpp  SectorEditorMaterialActions.h  SectorEditorPreviewActions.cpp  SectorEditorPreviewActions.h  SectorEditorPreviewSettingsModal.cpp  SectorEditorPreviewSettingsModal.h  SectorEditorSectorInspector.cpp  SectorEditorSectorInspector.h  SectorEditorTextureActions.cpp  SectorEditorTextureModals.cpp  SectorEditorTextureModals.h  SectorEditorTopologyActions.cpp  SectorEditorTopologyActions.h  SectorEditorTopologyRenderCache.cpp  SectorEditorTopologyRenderCache.h  SectorEditorTypes.h  SectorEditorUiHelpers.cpp  SectorEditorUiHelpers.h  SectorEditorVertexInspector.cpp  SectorEditorVertexInspector.h
tests/: SectorAuthoringGraphTests.cpp  SectorCollisionMovementTests.cpp  SectorCollisionWorldTests.cpp  SectorEditorUiLayoutTests.cpp  SectorFpsControllerTests.cpp  SectorPortalVisibilityTests.cpp  SectorRuntimeObjectTests.cpp  SectorSkyCylinderTests.cpp  SectorTopologyCreationTests.cpp  SectorTopologyGeneratedGeometryTests.cpp  SectorTopologyLightmapTests.cpp  SectorTopologyMeshBuilderTests.cpp  SectorTopologySerializationTests.cpp  SectorTopologyValidationTests.cpp
tools/: plan_executor.py  plan_executor_tui.py
